# sentrix

./: CLAUDE.md  Cargo.toml  README.md
briefs/: lsgg_lfpg.txt  lsgg_lszh.txt
conf/: credentials.json  sentrix.toml
docs/: SIMULATION.md
src/: config.rs  lido.rs  main.rs  opensky.rs  publisher.rs  simulation.rs
src/agent/: aircraft.rs  mod.rs  performance.rs  run.rs
src/live/: mod.rs  opensky.rs  run.rs
src/replay/: flight_path.rs  mod.rs  run.rs  sampler.rs
src/shared/: cat062.rs  config.rs  geo.rs  lido.rs  mod.rs  plan.rs
